# pattern-based-deobfuscator

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml  pattern_database.json  patterns.txt  todo.txt
.circleci/: config.yml
examples/: capstone.rs  keystone.rs
src/: byteorder_ext.rs  lib.rs  main.rs  pattern.rs  pattern_database.rs
src/pattern/: finder.rs  matcher.rs  mod.rs
tests/: pattern.rs
