[package]
name = "unhappy-arxan"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]

[dependencies]
keystone = "0.9.0"
goblin = "0.0.15"
regex = "1.0.0"
lazy_static = "1.0.0"
byteorder = "1.2.3"
log = "0.4.1"
env_logger = "0.5.10"
failure = "0.1.1"
failure_derive = "0.1.1"
fnv = "1.0.6"

[dev-dependencies]
capstone = "0.3.1"
