[package]
name = "pattern-based-deobfuscator"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
license = "MIT OR Apache-2.0"

[dependencies]
keystone = "0.9.0"
goblin = "0.0.15"
regex = "1.0.0"
lazy_static = "1.0.0"
byteorder = "1.2.3"
log = "0.4.1"
env_logger = "0.5.10"
failure = "0.1.1"
failure_derive = "0.1.1"
fxhash = "0.2.1"
parking_lot = "0.6.1"
serde = "1.0.65"
serde_json = "1.0.19"
structopt = "0.2.8"
serde_derive = "1.0.69"
number_prefix = "0.2.8"

[dev-dependencies]
capstone = "0.4.0"
quickcheck = "0.6.2"
