[package]
name = "pattern-based-deobfuscator"
version = "0.1.0"
authors = ["Boris-Chengbiao Zhou <bobo1239@web.de>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "pbd"
path = "src/main.rs"

[dependencies]
# Pending PR: https://github.com/keystone-engine/keystone/pull/401
keystone = { git = "https://github.com/bobo1239/keystone.git" }
goblin = "0.0.21"
regex = "1.1.0"
lazy_static = "1.2.0"
byteorder = "1.3.1"
log = "0.4.6"
env_logger = "0.6.0"
failure = "0.1.5"
failure_derive = "0.1.5"
fxhash = "0.2.1"
parking_lot = "0.7.1"
serde = "1.0.85"
serde_json = "1.0.37"
structopt = "0.2.14"
serde_derive = "1.0.85"
number_prefix = "0.3.0"
tempfile = "3.0.5"
rand = "0.6.4"

[dev-dependencies]
capstone = "0.5.0"
quickcheck = "0.8.0"
